Fix issue with disabling y scrolling on ios safari

--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,23 @@ html,
 body {
   font-family: 'Inter', sans-serif;
   font-weight: 400;
+
+  /* Hide scroll bar */
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* Internet Explorer 10+ */
+  position: relative;
 }
 
+/* Hide scroll bar */
 body::-webkit-scrollbar {
   width: 0;
   height: 0;
   display: none;
 }
 
+/* Prevent scroll when modal is open on ios */
 body.modal-open {
   overflow-y: hidden;
+  touch-action: none;
+  -ms-touch-action: none;
 }
